error.txt~
Waf: Entering directory `/home/vijay/repos/ns-3-allinone/ns-3-dev/build'
[1918/2242] cxx: scratch/SendPacket.cc -> build/scratch/SendPacket.cc.1.o
In file included from ./ns3/simulator.h:26:0,
                 from ./ns3/event-garbage-collector.h:25,
                 from ./ns3/core-module.h:29,
                 from ../scratch/ApplicationUtil.h:1,
                 from ../scratch/SendPacket.cc:1:
./ns3/make-event.h: In instantiation of ‘void ns3::MakeEvent(void (*)(U1, U2, U3), T1, T2, T3)::EventFunctionImpl3::Notify() [with U1 = ns3::Ptr<ns3::Socket>; U2 = int; U3 = int; T1 = ns3::Ptr<ns3::Socket>; T2 = std::basic_string<char>; T3 = int]’:
./ns3/make-event.h:364:3:   required from ‘ns3::EventImpl* ns3::MakeEvent(void (*)(U1, U2, U3), T1, T2, T3) [with U1 = ns3::Ptr<ns3::Socket>; U2 = int; U3 = int; T1 = ns3::Ptr<ns3::Socket>; T2 = std::basic_string<char>; T3 = int]’
./ns3/simulator.h:1054:49:   required from ‘static ns3::EventId ns3::Simulator::ScheduleNow(void (*)(U1, U2, U3), T1, T2, T3) [with U1 = ns3::Ptr<ns3::Socket>; U2 = int; U3 = int; T1 = ns3::Ptr<ns3::Socket>; T2 = std::basic_string<char>; T3 = int]’
../scratch/SendPacket.cc:396:117:   required from here
./ns3/make-event.h:358:37: error: cannot convert ‘TypeTraits<std::basic_string<char> >::ReferencedType {aka std::basic_string<char>}’ to ‘int’ in argument passing
       (*m_function)(m_a1, m_a2, m_a3);
                                     ^
Waf: Leaving directory `/home/vijay/repos/ns-3-allinone/ns-3-dev/build'
Build failed
 -> task in 'SendPacket' failed (exit status 1): 
	{task 158470348: cxx SendPacket.cc -> SendPacket.cc.1.o}
['/usr/bin/g++', '-O0', '-ggdb', '-g3', '-Wall', '-Werror', '-Wno-error=deprecated-declarations', '-fstrict-aliasing', '-Wstrict-aliasing', '-pthread', '-pthread', '-fno-strict-aliasing', '-fwrapv', '-fstack-protector', '-fno-strict-aliasing', '-I.', '-I..', '-I/usr/include/gtk-2.0', '-I/usr/lib/i386-linux-gnu/gtk-2.0/include', '-I/usr/include/atk-1.0', '-I/usr/include/cairo', '-I/usr/include/gdk-pixbuf-2.0', '-I/usr/include/pango-1.0', '-I/usr/include/gio-unix-2.0', '-I/usr/include/glib-2.0', '-I/usr/lib/i386-linux-gnu/glib-2.0/include', '-I/usr/include/pixman-1', '-I/usr/include/freetype2', '-I/usr/include/libpng12', '-I/usr/include/harfbuzz', '-I/usr/include/libxml2', '-I/usr/include/python2.7', '-I/usr/include/i386-linux-gnu/python2.7', '-DNS3_ASSERT_ENABLE', '-DNS3_LOG_ENABLE', '-DHAVE_SYS_IOCTL_H=1', '-DHAVE_IF_NETS_H=1', '-DHAVE_NET_ETHERNET_H=1', '-DHAVE_PACKET_H=1', '-DHAVE_SQLITE3=1', '-DHAVE_IF_TUN_H=1', '-DHAVE_GSL=1', '-DNDEBUG', '-D_FORTIFY_SOURCE=2', '../scratch/SendPacket.cc', '-c', '-o', 'scratch/SendPacket.cc.1.o']
